--- a/app/src/main/res/layout/fragment_encryption_key.xml
+++ b/app/src/main/res/layout/fragment_encryption_key.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.EncryptionKey">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/encrypt"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -22,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:text="Try to access the encryption key!"
+        android:fontFamily="serif-monospace"
+        android:text="Access the encryption key!"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +35,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="serif-monospace"
         android:gravity="center"
         android:hint="Plain text"
         android:maxLines="2"
@@ -53,6 +54,7 @@
         android:cursorVisible="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:fontFamily="serif-monospace"
         android:gravity="center"
         android:hint=" Cipher text"
         android:maxLines="2"
@@ -65,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:fontFamily="serif-monospace"
         android:text="Task"
         android:textAllCaps="true"
         android:textSize="18sp"
@@ -73,4 +76,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
