--- a/app/src/main/res/layout/fragment_pin_bypass.xml
+++ b/app/src/main/res/layout/fragment_pin_bypass.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,13 +23,16 @@
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Try to bypass the PIN check!"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="serif-monospace"
+        android:gravity="center"
+        android:text="Bypass the PIN check,\n then try to brute-force it!"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/pin"
-        app:layout_constraintStart_toStartOf="@+id/pin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task" />
 
     <EditText
@@ -40,11 +43,13 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:fontFamily="serif-monospace"
         android:gravity="center"
         android:hint="Enter PIN"
         android:inputType="number|numberPassword"
-        app:layout_constraintEnd_toEndOf="@+id/pin_check"
-        app:layout_constraintStart_toStartOf="@+id/pin_check"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <TextView
@@ -54,12 +59,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="serif-monospace"
         android:text="Task"
         android:textAllCaps="true"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/description"
-        app:layout_constraintStart_toStartOf="@+id/description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
