--- a/app/src/main/res/layout/fragment_pin_bypass.xml
+++ b/app/src/main/res/layout/fragment_pin_bypass.xml
@@ -28,10 +28,9 @@
         android:layout_marginEnd="32dp"
         android:fontFamily="serif-monospace"
         android:gravity="center"
-        android:text="Bypass the PIN check,\n then try to brute-force it!"
+        android:text="Bypass the PIN check or\n try to brute-force it!"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task" />
 
@@ -48,7 +47,6 @@
         android:hint="Enter PIN"
         android:inputType="number|numberPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
@@ -65,7 +63,6 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
